--- a/src/components/Experimental/Experimental.module.css
+++ b/src/components/Experimental/Experimental.module.css
@@ -4,13 +4,14 @@
     justify-self: center;
     align-self:center;
     width: 80vw;
-    height: 250px;
+    height: 25vh;
     margin-bottom: 5rem;
     flex-direction: row-reverse;
     padding-left: 1rem;
     border: 10px solid rgb(64, 152, 219);
     border-bottom-color: transparent;
     border-right-color: transparent;
+    overflow:visible
 }
 
 .title{
@@ -35,4 +36,5 @@
 .description{
     font-size: 1.5em;
     margin-bottom: 30px;
+    overflow: hidden;
 }
