--- a/src/components/BgScroller/BgScroller.module.css
+++ b/src/components/BgScroller/BgScroller.module.css
@@ -3,6 +3,7 @@
     height: 40vh; /* Increased for better effect */
     overflow: hidden;
     position: relative;
+    background: linear-gradient(rgb(0, 110, 255), rgb(255, 255, 255)), url("/carousel_images/img_2.jpg")
   }
   
   .image {
