--- a/src/components/CardSlider/CardSlider.module.css
+++ b/src/components/CardSlider/CardSlider.module.css
@@ -5,7 +5,7 @@
     margin-left: 4rem;
     scroll-behavior: smooth;
     transition: scroll 0.3s ease-in-out;
-    overflow-x: auto;
+    overflow-x: scroll;
     align-items: center;
     border: 5px solid rgb(228, 228, 228);
     border-radius: 5rem;
