--- a/src/components/HomeCarousel/HomeCarousel.module.css
+++ b/src/components/HomeCarousel/HomeCarousel.module.css
@@ -8,9 +8,8 @@
 }
 
 .carouselImages{
-    max-width: 100vw;
-    object-fit: cover;
-    aspect-ratio: 2.5/1;
+    width: 100vw;
+    height: 80vh;
     flex-shrink: 0;
     flex-grow: 0;
     transition: translate 400ms ease-in-out;
