--- a/src/components/Marquee/Marquee.module.css
+++ b/src/components/Marquee/Marquee.module.css
@@ -4,7 +4,7 @@
     position: absolute;
     z-index: 500;
     background-color: rgba(189, 238, 255, 0.433);
-    margin-top: 27%;
+    top:30em;
     margin-left: 15%;
     border-radius: 1rem;
     backdrop-filter: blur(5px);
@@ -30,4 +30,19 @@
     color: gold;
     padding-right: 1rem;
     text-shadow: 5px 5px 5px white;
+}
+
+@media (max-width: 648px){
+    .marquee{
+        width: 90vw;
+        margin-left: 50%;
+        transform: translateX(-50%);
+        height: 4em;
+    }
+    .MarqueeText{
+        font-size: 1.5rem;
+    }
+    #bell{
+        font-size: 1.7rem;
+    }
 }
