--- a/src/components/TitleChanger/TitleChanger.module.css
+++ b/src/components/TitleChanger/TitleChanger.module.css
@@ -1,24 +1,21 @@
 .container {
-    position: relative;
-    width: 40vw;
-    height: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 5px;
-    overflow: hidden;
-    z-index: 200;
+    display: flex !important;
+    justify-self: center !important;
+    justify-content: center !important;
+    align-self: center !important;
+    align-items: center !important; 
+    width: 90vw;
 }
 
 .text {
-    position: absolute;
-    width: 80%;
-    text-align: center;
+    text-align: center !important;
     transition: opacity 0.2s ease-in-out;
-    font-size: 30px;
+    font-size: 2.2vw;
     overflow: hidden;
     z-index: 200;
-    color: rgb(0, 0, 44);
+    color: black;
+    font-family: sans-serif;
+    text-align: center !important;
 }
 
 .fadeIn {
