--- a/src/components/TopNav/TopNav.module.css
+++ b/src/components/TopNav/TopNav.module.css
@@ -1,7 +1,7 @@
 
 .topNav{
     width: 100vw;
-    height: 25px;
+    height: 1.8em;
     background-color: rgb(46, 93, 158);
     color: white;
     display: flex;
@@ -9,6 +9,8 @@
     align-items: center;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     overflow: hidden;
+    font-size: 1.2vw;
+    
 }
 
 .socialIcon{
@@ -27,3 +29,15 @@
     transform: scale(1.5);
 }
 
+@media(max-width: 648px) {
+    .topNav{
+        height: 1.6em;
+        font-size: 4vw;
+
+    }
+    .socialIcon{
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+
+}
