responsiveness added for home carousel

--- a/src/components/HomeCarousel/HomeCarousel.module.css
+++ b/src/components/HomeCarousel/HomeCarousel.module.css
@@ -15,3 +15,10 @@
     overflow: hidden;
     z-index: -15;
 }
+
+@media(max-width: 648px){
+    .carouselImages{
+        height: 60vh;
+        object-fit: cover;
+    }
+}
