--- a/main.css
+++ b/main.css
@@ -1,12 +1,8 @@
 *{
     margin: 0;
     padding: 0;
-    overflow-x: hidden !important;
+    overflow-x: hidden;
     caret-color: transparent;
-    border: 0px solid black;
-    -webkit-user-select: none; /* Safari */
-    -ms-user-select: none; /* IE 10 and IE 11 */
-    user-select: none; /* Standard syntax */
 }
 
 
