--- a/src/components/BgScroller/BgScroller.module.css
+++ b/src/components/BgScroller/BgScroller.module.css
@@ -9,7 +9,6 @@
   .image {
     height: 110vh;
     width: 110vw;
-    filter: blur(5px);
     will-change: transform; /* Hint for performance */
   }
 
@@ -51,3 +50,19 @@
     background-color: rgba(0, 2, 50, 0.255);
     border-radius: 5px;
   }
+@media (max-width:648px){
+  .image{
+    object-fit: cover;
+  }
+  #campus{
+    text-align: center;
+    margin: 0;
+    font-size: 12vw;
+    overflow: visible;
+  }
+  #description{
+    font-size: 4vw;
+    padding: 10px;
+    overflow: visible;
+  }
+}
