--- a/src/components/CardSlider/CardSlider.module.css
+++ b/src/components/CardSlider/CardSlider.module.css
@@ -86,3 +86,27 @@
 .sliderIcons:active{
     transform: scale(0.9);
 }
+
+@media(max-width:648px){
+    .cardSlider{
+        margin: 0;
+        width: 95vw;
+        height: 35vh;
+        border: 0;
+        border-radius: 0;
+
+    }
+    .card{
+        flex: 0 0 140px;
+        height: 16em;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-size: 3vw;
+    }
+    .card h2{
+        display: none;
+    }
+    .card h3{
+        font-size: 3.7vw;
+    }
+    
+}
