--- a/src/components/Experimental/Experimental.module.css
+++ b/src/components/Experimental/Experimental.module.css
@@ -36,5 +36,26 @@
 .description{
     font-size: 1.5em;
     margin-bottom: 30px;
-    overflow: hidden;
+    overflow: visible;
+}
+
+@media(max-width:648px){
+    .Experimental{
+        transform: scale(0.5);
+        width: 100vw !important;
+        transform: scale(0) !important;
+        transform: translateX(0) !important;
+        height: 20em;
+    }
+    .title{
+        font-size: 5vw;
+        overflow:visible ;
+    }
+    .textVals{
+        font-size: 4vw;
+    }
+    .image{
+        max-width: 40%;
+        max-height: 50%;
+    }
 }
