--- a/src/components/PhotoGallery/PhotoGallery.module.css
+++ b/src/components/PhotoGallery/PhotoGallery.module.css
@@ -87,3 +87,12 @@
     color: #ff5f5f;
   }
   
+@media (max-width:648px){
+  .photoGallery{
+    margin: 0;
+    width: 80vw;
+    transform: translate(0);
+    margin-left: 50%;
+    transform: translateX(-50%);
+  }
+}
