--- a/src/components/Experimental/Experimental.module.css
+++ b/src/components/Experimental/Experimental.module.css
@@ -42,20 +42,30 @@
 @media(max-width:648px){
     .Experimental{
         transform: scale(0.5);
-        width: 100vw !important;
+        width: 80vw !important;
         transform: scale(0) !important;
         transform: translateX(0) !important;
         height: 20em;
+        margin: 0;
+        border-width: 6px;
+        margin-top: 2em;
     }
     .title{
-        font-size: 5vw;
+        font-size: 6vw;
         overflow:visible ;
+        margin: 0 !important;
     }
-    .textVals{
-        font-size: 4vw;
+    .description{
+        font-size: 4.5vw;
+        overflow:visible;
+        margin: 0 !important;
     }
     .image{
         max-width: 40%;
-        max-height: 50%;
+        max-height: 40%;
+        margin: 0 !important;
+        transform: translateY(20%);
+        border-radius: 1rem !important;
+        transform: translateY(50%);
     }
 }
