--- a/src/components/TopNav/TopNav.module.css
+++ b/src/components/TopNav/TopNav.module.css
@@ -10,7 +10,8 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     overflow: hidden;
     font-size: 1.2vw;
-    
+    top: 0;
+    position: sticky !important;
 }
 
 .socialIcon{
