navbar made sticky

--- a/src/components/Experimental2/Experimental2.module.css
+++ b/src/components/Experimental2/Experimental2.module.css
@@ -55,6 +55,8 @@
         overflow:visible ;
         margin: 0;
         text-align: start;
+        margin-top: 50%;
+        text-align: center;
     }
     .description{
         font-size: 4vw;
