--- a/main.css
+++ b/main.css
@@ -1,8 +1,11 @@
 *{
     margin: 0;
     padding: 0;
-    overflow-x: hidden;
     caret-color: transparent;
+}
+
+body{
+    overflow-x: hidden;
 }
 
 
