--- a/src/App.module.css
+++ b/src/App.module.css
@@ -38,6 +38,12 @@
     justify-content: space-between;
 }
 
+nav{
+    top: 0;
+    position: sticky;
+    z-index: 999999;
+}
+
 @media (max-width:648px){
     .eventsAndAchievements{
         flex-direction: column;
