--- a/src/components/FrontTitle/FrontTitle.module.css
+++ b/src/components/FrontTitle/FrontTitle.module.css
@@ -17,6 +17,8 @@
     animation: floating 2.8s ease-in-out infinite;
     font-size: 2.5rem;
     overflow: hidden;
+    text-shadow: 5px 5px 7px rgb(0, 0, 0);
+    padding: 1rem;
 }
 
 @keyframes floating {
