--- a/src/components/TitleChanger/TitleChanger.module.css
+++ b/src/components/TitleChanger/TitleChanger.module.css
@@ -4,7 +4,7 @@
     justify-content: center !important;
     align-self: center !important;
     align-items: center !important; 
-    width: 90vw;
+    width: 100%;
 }
 
 .text {
