--- a/src/components/EnquiryForm/EnquiryForm.css
+++ b/src/components/EnquiryForm/EnquiryForm.css
@@ -1,19 +1,19 @@
 
 .admission-form-container {
-  width: 30vw;
+  width: 80%;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.474);
   background: rgb(255, 255, 255);
   border-radius: 10px;
   padding: 20px;
   transition: transform 0.3s ease, opacity 0.3s ease;
   animation: fadeIn 0.6s ease-in-out;
-  margin: 2rem;
+  margin-left: 5rem;
+  margin-bottom: 3rem;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   display: flex;
   flex-direction: column;
   justify-self: end;
   height: 25em;
-  transform: translateX(9em) translateY(3em);
 }
 
 .admission-form h2 {
@@ -35,7 +35,7 @@
 
 .form-group input[type="text"],
 .form-group input[type="email"] {
-  width: 100%;
+  width: 90%;
   padding: 10px;
   font-size: 1rem;
   border: 1px solid #ddd;
