--- a/src/components/Experimental/Experimental.module.css
+++ b/src/components/Experimental/Experimental.module.css
@@ -3,7 +3,7 @@
     justify-content: space-around;
     justify-self: center;
     align-self:center;
-    width: 80vw;
+    width: 100%;
     height: 25vh;
     margin-bottom: 5rem;
     flex-direction: row-reverse;
