--- a/src/components/Experimental2/Experimental2.module.css
+++ b/src/components/Experimental2/Experimental2.module.css
@@ -3,7 +3,7 @@
     justify-content: space-around;
     justify-self: center;
     align-self:center;
-    width: 80vw;
+    width: 100%;
     height: 250px;
     margin-top: 5rem;
     margin-bottom: 5rem;
@@ -64,10 +64,10 @@
         margin: 0;
     }
     .image{
-        max-width: 70%;
-        max-height: 60%;
+        max-width: 50%;
+        max-height: 40%;
         margin-bottom: 0 !important;
-        transform: translateY(50%);
+        transform: translateY(100%);
     }
     .textVals{
         padding-left: 1rem;
