--- a/src/components/FrontTitle/FrontTitle.module.css
+++ b/src/components/FrontTitle/FrontTitle.module.css
@@ -1,5 +1,5 @@
 .frontTitle{
-    width: 100%;
+    width: 100;
     height: 9%;
     position: absolute;
     display: flex;
@@ -7,6 +7,9 @@
     align-items: center;
     z-index: 500;
     overflow: hidden;
+    margin-left: 50%;
+    transform: translateX(-50%);
+    margin-top: 20px;
 }
 
 .titleText{
