--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -4,7 +4,7 @@
     color: white;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     height: 10%;
-    width: 100vw;
+    width: 100%;
     justify-content: space-evenly;
     align-items: center;
     caret-color: transparent;
@@ -22,7 +22,7 @@
 }
 
 .navMenu{
-    width: 100vw;
+    width: 100%;
     position: absolute;
     z-index: 5;
     background-color: rgb(64, 152, 219);
