--- a/src/components/PhotoGallery/PhotoGallery.module.css
+++ b/src/components/PhotoGallery/PhotoGallery.module.css
@@ -2,8 +2,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 28vw; /* Maintain original width */
-    margin: 2rem auto;
+    width: 80%; /* Maintain original width */
+    height: 35em;
     background: linear-gradient(rgba(255, 255, 255, 0.467), rgba(255, 255, 255, 0.385));
     backdrop-filter: blur(5px);
     border-radius: 1rem;
@@ -11,6 +11,7 @@
     padding: 1rem;
     overflow: hidden;
     transform: translateX(7rem);
+    margin-right: 7rem;
   }
   
   .row {
@@ -92,7 +93,5 @@
     margin: 0;
     width: 80vw;
     transform: translate(0);
-    margin-left: 50%;
-    transform: translateX(-50%);
   }
 }
