--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -3,7 +3,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    background: url("https://i.ibb.co/rp4yL0d/13.jpg");
+    background: linear-gradient(rgb(10,10,10,0.55), rgba(10, 10, 10, 0.142)), url("https://i.ibb.co/rp4yL0d/13.jpg");
     background-size: contain;
     background-repeat: no-repeat;
     background-size: 120%;
@@ -11,7 +11,7 @@
     color: white;
     font-family: sans-serif;
     width: 100;
-    height: 13em;
+    height: 12em;
 }
 
 .textContent{
@@ -44,7 +44,8 @@ a{
     max-width: 5em;
 }
 
-
 h4{
     text-align: center;
 }
+
+    
