--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -73,6 +73,7 @@
     padding: 5px;
     border-radius: 2rem;
     overflow: hidden;
+    text-decoration: none;
 }
 
 
@@ -111,6 +112,7 @@
     font-size: 1.3rem;
     padding-right: 3px;
 }
+
 
 @media (max-width: 648px){
     .navbar{
