--- a/src/components/PcCard/PcCard.module.css
+++ b/src/components/PcCard/PcCard.module.css
@@ -42,9 +42,10 @@
     font-style: italic;
     margin-top: 16px;
   }
-  
-  @media(min-width:648px){
+
+  @media(max-width:648px){
     .cardContainer{
         display: none;
     }
   }
+  
