--- a/src/components/mobileNavBar/MobileNavBar.module.css
+++ b/src/components/mobileNavBar/MobileNavBar.module.css
@@ -132,3 +132,14 @@
     font-size: 10vw;
     padding-right: 3px;
 }
+
+.NavLink{
+    text-decoration: none;
+    color: white;
+    background: transparent;
+    padding: 0;
+}
+
+.NavLink:hover{
+    color: rgb(64, 152, 219)
+}
