--- a/src/components/LongCard/LongCard.module.css
+++ b/src/components/LongCard/LongCard.module.css
@@ -22,7 +22,7 @@
 }
 
 .textBox{
-    background-color: rgb(255, 248, 255);
+    background-color: #eef2f5;
     height: 20vh;
     width: 59.6vw;
     display: flex;
