--- a/src/components/Admissions/Admissions.module.css
+++ b/src/components/Admissions/Admissions.module.css
@@ -1,6 +1,8 @@
 h1{
     text-align: center;
     padding: 0.5rem;
+    font-family: sans-serif;
+    color: rgb(0, 0, 78);
 }
 .haha{
     display: none ;
