--- a/src/components/CardSlider/CardSlider.module.css
+++ b/src/components/CardSlider/CardSlider.module.css
@@ -12,6 +12,7 @@
     border-bottom: transparent;
     border-left: transparent;
     padding-left: 1%;
+    font-family: sans-serif;
 }
 
 .card {
@@ -38,8 +39,7 @@
     width: 100%;
     height: 150px; /* Fixed height for the image */
     object-fit: cover; /* Crops the image to fit the specified dimensions */
-    border-top-left-radius: 1.5rem;
-    border-bottom-right-radius: 1.5rem;
+    border-radius: 1rem;
 }
 
 .card h2, .card h4, .card p {
@@ -107,6 +107,9 @@
     }
     .card h3{
         font-size: 3.7vw;
+    }
+    .card img{
+        max-height: 60%;
     }
     
 }
