--- a/src/components/PhotoGallery/PhotoGallery.module.css
+++ b/src/components/PhotoGallery/PhotoGallery.module.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     width: 80%; /* Maintain original width */
-    height: 35em;
+    height: 100;
     background: linear-gradient(rgba(255, 255, 255, 0.467), rgba(255, 255, 255, 0.385));
     backdrop-filter: blur(5px);
     border-radius: 1rem;
@@ -32,6 +32,7 @@
     border-radius: 1rem;
     cursor: pointer;
     transition: box-shadow 0.2s ease-in-out, filter 0.2s ease-in-out;
+    min-height: 60%;
   }
   
   .img:hover {
