--- a/src/components/BgScroller/BgScroller.module.css
+++ b/src/components/BgScroller/BgScroller.module.css
@@ -12,7 +12,7 @@
     will-change: transform; /* Hint for performance */
   }
 
-  .values{
+  .values{  
     color: rgb(255, 255, 255);
     display: flex;
     position: absolute;
@@ -23,15 +23,15 @@
     margin-left: 2.5%;
     align-self: center;
     align-items: center;
-    justify-content: center;
+    justify-content: start;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     flex-direction: column;
     text-align: center;
+    margin-top: 1.5vw;
   }
 
   #campus{
-    margin-bottom: 3rem;
-    font-size: 4.6em;
+    font-size: 4.5vw;
     margin-right: 67%;
     color: yellow;
     border: 10px solid transparent;
@@ -40,14 +40,14 @@
   }
 
   #description{
-    font-size: 1.8em;
+    font-size: 2.2vw;
     color:rgb(255, 255, 255);
     margin-left: 7%;
     margin-right: 7%;
     border: 5px solid transparent;
     border-left-color: rgb(255, 255, 255);
     border-top-color: rgb(255, 255, 255);
-    background-color: rgba(0, 2, 50, 0.255);
+    background-color: rgba(0, 2, 50, 0.455);
     border-radius: 5px;
   }
 @media (max-width:648px){
