--- a/src/components/CardSliderVertical/CardSliderVertical.module.css
+++ b/src/components/CardSliderVertical/CardSliderVertical.module.css
@@ -4,7 +4,7 @@
     align-items: center;
     height: 24em;
     width: 30vw;
-    margin-right: 4rem;
+    margin-right: 1vw;
     border-radius: 1rem;
     background-color:rgb(237, 250, 255);
     align-self: center;
