--- a/src/components/BigCard/BigCard.module.css
+++ b/src/components/BigCard/BigCard.module.css
@@ -2,11 +2,10 @@
     height: 14em;
     width: 90vw;
     border: 5px solid rgb(64, 152, 219);
-    margin-top: 2rem;
     display: flex;
     justify-self: center;
     flex-direction: column;
-    margin-bottom: 3rem;
+    margin-bottom: 3vw;
     border-bottom-color: transparent;
     border-right: transparent;
 }
@@ -27,14 +26,14 @@
 }
 
 .title{
-    font-size: 2em;
+    font-size: 2.4vw;
     margin-left: 1.6rem;
     overflow: visible;
     margin-top: 0.1em;
 }
 
 .description{
-    font-size: 1.2em;
+    font-size: 1.4vw;
     color: black;
     padding: 0rem;
     overflow: hidden;
