--- a/src/components/Marquee/Marquee.module.css
+++ b/src/components/Marquee/Marquee.module.css
@@ -4,7 +4,7 @@
     position: absolute;
     z-index: 500;
     background-color: rgba(189, 238, 255, 0.433);
-    top:40em;
+    top:80vh;
     margin-left: 15%;
     border-radius: 1rem;
     backdrop-filter: blur(5px);
