--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -13,13 +13,14 @@
 
 .logo{
     width: 7vw;
-    min-width: 80px;
-    max-width: 100px;
+    max-width: 110px;
     z-index: 10;
     margin: 0;
     padding: 0;
     overflow: hidden;
     cursor: pointer;
+    position: relative;
+    min-width: 100px;
 }
 
 .logo:active{
@@ -31,8 +32,8 @@
     position: absolute;
     z-index: 5;
     background-color: rgb(64, 152, 219);
-    height: 50px;
-    top: 85px;
+    height: 60px;
+    top: 90px;
     display: flex;
     justify-content:space-between;
     align-items: center;
@@ -43,10 +44,9 @@
 
 .titleBox{
     display: flex;
-    height: 50px;
+    height: 60px;
     width: 40vw;
     z-index: 15;
-    margin-bottom: 65px;
     text-align: center;
     color: black;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -54,7 +54,7 @@
     align-items: center;
     justify-content: center;
     overflow: hidden;
-    font-size: 1.1vw
+    transform: translateY(-55%);
 }
 
 .navOptionBox{
@@ -68,8 +68,8 @@
     width: 40vw;
     height: 40px;
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    margin-left: 30px;
-    margin-right: 30px;
+    margin-left: 1%;
+    margin-right: 1%;
     align-items: center;
     overflow: hidden;
 }
@@ -81,20 +81,12 @@
     text-decoration: none;
 }
 
-
-.name{
-    position: absolute;
-    overflow: hidden;
-}
-
 .yo{
     display: flex;
     flex-direction: row;
     align-items: center;
     align-content: center;
     border-radius: 3rem;
-    padding-left: 7px;
-    padding-right: 7px;
 }
 
 .yo:hover{
@@ -128,6 +120,10 @@
 
 .NavLink:hover{
     color: rgb(64, 152, 219)
+}
+
+.motto{
+    font-size: 150%;
 }
 
 
