--- a/src/components/CardSlider/CardSlider.module.css
+++ b/src/components/CardSlider/CardSlider.module.css
@@ -1,16 +1,15 @@
 .cardSlider {
     display: flex;
     width: 55vw;
-    height: 25em;
     margin-left: 1vw;
     scroll-behavior: smooth;
     transition: scroll 0.3s ease-in-out;
     overflow-x: scroll;
     align-items: center;
     border: 5px solid rgb(228, 228, 228);
-    border-radius: 5rem;
+    border-top: transparent;
+    border-right: transparent;
     border-bottom: transparent;
-    border-left: transparent;
     padding-left: 1%;
     font-family: sans-serif;
 }
@@ -20,7 +19,6 @@
     flex-direction: column;
     justify-content: space-around;
     width: 15vw;
-    height: 20em;
     margin-left: 1%;
     margin-right: 1%;
     flex: 0 0 210px;
@@ -30,23 +28,21 @@
     overflow: hidden;
     padding: 10px;
     text-align: center;
-    border: 5px solid transparent;
-    border-bottom-color: navy;
-    border-top-color: navy;
 }
 
 .card img {
     width: 100%;
-    height: 150px; /* Fixed height for the image */
+    height: 12vw; /* Fixed height for the image */
     object-fit: cover; /* Crops the image to fit the specified dimensions */
     border-radius: 1rem;
+    min-height: 170px;
 }
 
 .card h2, .card h4, .card p {
     font-family: Arial, sans-serif;
     margin: 10px 0;
     color: #333;
-    font-size: 1em;
+    font-size: 1vw;
     text-align: center;
 }
 
@@ -102,9 +98,6 @@
         height: 16em;
         font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         font-size: 3vw;
-    }
-    .card h2{
-        display: none;
     }
     .card h3{
         font-size: 3.7vw;
