--- a/src/components/EnquiryForm/EnquiryForm.css
+++ b/src/components/EnquiryForm/EnquiryForm.css
@@ -1,20 +1,21 @@
 
 .admission-form-container {
-  width: 70%;
+  width: 80%;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.474);
   background: rgb(255, 255, 255);
   border-radius: 10px;
   padding: 20px;
   transition: transform 0.3s ease, opacity 0.3s ease;
   animation: fadeIn 0.6s ease-in-out;
-  margin-left: 5rem;
-  margin-bottom: 3rem;
+  margin-left: 1vw;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   display: flex;
   flex-direction: column;
   justify-self: end;
   height: 25em;
   z-index: 0;
+  margin-right: 2vw;
+
 }
 
 .admission-form h2 {
