--- a/src/components/Experimental/Experimental.module.css
+++ b/src/components/Experimental/Experimental.module.css
@@ -3,20 +3,20 @@
     justify-content: space-around;
     justify-self: center;
     align-self:center;
-    width: 100%;
-    height: 25vh;
-    margin-bottom: 5rem;
+    width: 90%;
+    height: 12em;
     flex-direction: row-reverse;
     padding-left: 1rem;
     border: 10px solid rgb(64, 152, 219);
     border-bottom-color: transparent;
     border-right-color: transparent;
-    overflow:visible
+    overflow:visible;
+    margin-top: 1vw;
 }
 
 .title{
-    font-size: 4em;
-    color: rgb(0, 2, 36);
+    font-size: 2.5vw;
+    color:rgb(30, 30, 30);
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
@@ -31,11 +31,11 @@
 .image{
     height: 90%;
     margin-top: 1.7rem;
+    border-radius: 1rem;
 }
 
 .description{
-    font-size: 1.5em;
-    margin-bottom: 30px;
+    font-size: 1.5vw;
     overflow: visible;
 }
 
