--- a/src/components/Experimental2/Experimental2.module.css
+++ b/src/components/Experimental2/Experimental2.module.css
@@ -3,10 +3,10 @@
     justify-content: space-around;
     justify-self: center;
     align-self:center;
-    width: 100%;
-    height: 250px;
-    margin-top: 5rem;
-    margin-bottom: 5rem;
+    width: 90%;
+    height: 12em;
+    margin-top: 1vw;
+    margin-bottom: 3vw;
     padding-left: 1rem;
     border: 10px solid rgb(64, 152, 219);
     border-top-color: transparent;
@@ -15,10 +15,10 @@
 }
 
 .title{
-    font-size: 4em;
-    color: rgb(0, 2, 36);
+    font-size: 2.5vw;
+    color: rgb(30, 30, 30);
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    text-align: end;
+    text-align: center;
 }
 
 .textVals{
@@ -36,8 +36,9 @@
 }
 
 .description{
-    font-size: 1.5em;
+    font-size: 1.5vw;
     margin-bottom: 30px;
+    padding-left: 1.5vw;
 }
 @media(max-width:648px){
     .Experimental{
