--- a/src/components/FrontTitle/FrontTitle.module.css
+++ b/src/components/FrontTitle/FrontTitle.module.css
@@ -31,7 +31,13 @@
 }
 
 @media (max-width: 648px) {
-    .titleText{
-        display: none;
+    .frontTitle{
+        width: 100%;
+        height: 12%;
+    }
+    @keyframes floating {
+        0% { transform: translateY(0); }
+        50% { transform: translateY(-7px); }
+        100% { transform: translateY(0); }
     }
 }
