--- a/src/components/TitleChanger/TitleChanger.module.css
+++ b/src/components/TitleChanger/TitleChanger.module.css
@@ -3,6 +3,7 @@
     justify-self: center !important;
     justify-content: center !important;
     align-self: center !important;
+    width: 100%;
     align-items: center !important; 
 }
 
