--- a/src/components/CardSlider/CardSlider.module.css
+++ b/src/components/CardSlider/CardSlider.module.css
@@ -2,7 +2,7 @@
     display: flex;
     width: 55vw;
     height: 25em;
-    margin-left: 1vw;
+    margin-left: 4rem;
     scroll-behavior: smooth;
     transition: scroll 0.3s ease-in-out;
     overflow-x: scroll;
@@ -94,7 +94,6 @@
         height: 35vh;
         border: 0;
         border-radius: 0;
-        margin-bottom: 4vw;
 
     }
     .card{
