--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -3,7 +3,6 @@
     background-color: white;
     color: white;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    height: 10%;
     width: 100%;
     justify-content: space-evenly;
     align-items: center;
@@ -13,14 +12,13 @@
 
 .logo{
     width: 7vw;
-    max-width: 110px;
+    min-width: 80px;
+    max-width: 100px;
     z-index: 10;
     margin: 0;
     padding: 0;
     overflow: hidden;
     cursor: pointer;
-    position: relative;
-    min-width: 100px;
 }
 
 .logo:active{
@@ -32,8 +30,8 @@
     position: absolute;
     z-index: 5;
     background-color: rgb(64, 152, 219);
-    height: 60px;
-    top: 90px;
+    height: 50px;
+    top: 85px;
     display: flex;
     justify-content:space-between;
     align-items: center;
@@ -44,9 +42,9 @@
 
 .titleBox{
     display: flex;
-    height: 60px;
     width: 40vw;
     z-index: 15;
+    margin-bottom: 4%;
     text-align: center;
     color: black;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -54,7 +52,9 @@
     align-items: center;
     justify-content: center;
     overflow: hidden;
-    transform: translateY(-55%);
+    align-self: center;
+    justify-self: center;
+    height: 1em;
 }
 
 .navOptionBox{
@@ -68,8 +68,8 @@
     width: 40vw;
     height: 40px;
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    margin-left: 1%;
-    margin-right: 1%;
+    margin-left: 30px;
+    margin-right: 30px;
     align-items: center;
     overflow: hidden;
 }
@@ -81,12 +81,20 @@
     text-decoration: none;
 }
 
+
+.name{
+    position: absolute;
+    overflow: hidden;
+}
+
 .yo{
     display: flex;
     flex-direction: row;
     align-items: center;
     align-content: center;
     border-radius: 3rem;
+    padding-left: 7px;
+    padding-right: 7px;
 }
 
 .yo:hover{
@@ -123,7 +131,7 @@
 }
 
 .motto{
-    font-size: 150%;
+ font-size: 2vw;
 }
 
 
