--- a/src/components/TopNav/TopNav.module.css
+++ b/src/components/TopNav/TopNav.module.css
@@ -1,7 +1,7 @@
 
 .topNav{
     width: 100%;
-    height: 35px;
+    height: 5%;
     background-color: rgb(46, 93, 158);
     color: white;
     display: flex;
@@ -9,8 +9,8 @@
     align-items: center;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     overflow: hidden;
-    font-size: 100%;
-    z-index: 99999;
+    font-size: 1.2vw;
+    z-index: 99;
 }
 
 .socialIcon{
