--- a/src/components/FrontTitle/FrontTitle.module.css
+++ b/src/components/FrontTitle/FrontTitle.module.css
@@ -1,6 +1,5 @@
 .frontTitle{
-    width: 100;
-    height: 9%;
+    width: 100%;
     position: absolute;
     display: flex;
     justify-content: center;
@@ -9,7 +8,7 @@
     overflow: hidden;
     margin-left: 50%;
     transform: translateX(-50%);
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 .titleText{
@@ -18,7 +17,7 @@
     font-family: sans-serif;
     z-index: 5100;
     animation: floating 2.8s ease-in-out infinite;
-    font-size: 2.5rem;
+    font-size: 2.7vw;
     overflow: hidden;
     text-shadow: 5px 5px 7px rgb(0, 0, 0);
     padding: 1rem;
@@ -33,7 +32,11 @@
 @media (max-width: 648px) {
     .frontTitle{
         width: 100%;
-        height: 12%;
+        height: 13%;
+    }
+    .titleText{
+        font-size: 7vw;
+        margin-top: 20px;
     }
     @keyframes floating {
         0% { transform: translateY(0); }
