--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -31,7 +31,7 @@
     z-index: 5;
     background-color: rgb(64, 152, 219);
     height: 50px;
-    top: 85px;
+    top: 80px;
     display: flex;
     justify-content:space-between;
     align-items: center;
@@ -44,7 +44,7 @@
     display: flex;
     width: 40vw;
     z-index: 15;
-    margin-bottom: 4%;
+    margin-bottom: 5vw;
     text-align: center;
     color: black;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -68,8 +68,8 @@
     width: 40vw;
     height: 40px;
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    margin-left: 30px;
-    margin-right: 30px;
+    margin-left: 1%;
+    margin-right: 1%;
     align-items: center;
     overflow: hidden;
 }
@@ -93,8 +93,6 @@
     align-items: center;
     align-content: center;
     border-radius: 3rem;
-    padding-left: 7px;
-    padding-right: 7px;
 }
 
 .yo:hover{
@@ -131,7 +129,12 @@
 }
 
 .motto{
- font-size: 2vw;
+ font-size: 1.5em;
+}
+
+.kps{
+    margin-top: 0.1vw;
+    font-size: 1.5em;
 }
 
 
