--- a/src/components/TitleChanger/TitleChanger.module.css
+++ b/src/components/TitleChanger/TitleChanger.module.css
@@ -3,20 +3,20 @@
     justify-self: center !important;
     justify-content: center !important;
     align-self: center !important;
-    width: 100%;
     align-items: center !important; 
-    width: 100%;
+    width: 100% !important;
 }
 
 .text {
     text-align: center !important;
     transition: opacity 0.2s ease-in-out;
-    font-size: 1.7vw;
+    font-size: 1.4em;
     overflow: hidden;
     z-index: 200;
     color: black;
     font-family: sans-serif;
     text-align: center !important;
+    margin-top: 1.5%;
 }
 
 .fadeIn {
