--- a/src/components/CardSliderVertical/CardSliderVertical.module.css
+++ b/src/components/CardSliderVertical/CardSliderVertical.module.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     height: 24em;
-    width: 30vw;
+    width: 40%;
     border-radius: 1rem;
     background-color:rgb(237, 250, 255);
     align-self: center;
@@ -15,9 +15,8 @@
     background-color: white;
     color: rgb(85, 83, 116);
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 0.91em;
     border-radius: 1rem;
-    height: 30%;
+    height: 7vw;
     width: 90%;
     margin-top: 20px;
     justify-content: center;
@@ -28,6 +27,7 @@
     flex-grow: 0;
     flex-shrink: 0;
     box-shadow: 2px 2px 2px 2px rgb(237, 237, 237);
+    font-size: 1.2vw;
 }
 
 @media (max-width:648px){
@@ -37,6 +37,9 @@
         height: 20em;
     }
     .card{
-        height: 5em;
+        height: 8em;
+    }
+    .card p{
+        font-size: 4vw;
     }
 }
