--- a/src/components/CardSliderVertical/CardSliderVertical.module.css
+++ b/src/components/CardSliderVertical/CardSliderVertical.module.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     height: 24em;
-    width: 40%;
+    width: 40vw;
     border-radius: 1rem;
     background-color:rgb(237, 250, 255);
     align-self: center;
