--- a/src/components/CardSlider/CardSlider.module.css
+++ b/src/components/CardSlider/CardSlider.module.css
@@ -1,6 +1,6 @@
 .cardSlider {
     display: flex;
-    width: 50%;
+    width: 50vw;
     margin-left: 1vw;
     scroll-behavior: smooth;
     transition: scroll 0.3s ease-in-out;
