--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -1,6 +1,6 @@
 .eventsAndAchievements{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     flex-direction: row;
     overflow-x: hidden;
     align-items: center;
@@ -57,6 +57,14 @@ nav{
 a{
     padding: 2px;
     text-decoration: none;
+}
+
+.withHeadings{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: sans-serif;
+    color: rgb(0, 0, 58);
 }
 
 
