--- a/src/components/CardSliderVertical/CardSliderVertical.module.css
+++ b/src/components/CardSliderVertical/CardSliderVertical.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 24em;
+    height: 100;
     width: 40vw;
     border-radius: 1rem;
     background-color:rgb(237, 250, 255);
