--- a/src/components/TopNav/TopNav.module.css
+++ b/src/components/TopNav/TopNav.module.css
@@ -29,6 +29,11 @@
     transform: scale(1.5);
 }
 
+.viewCount{
+    position: absolute;
+    left: 0;
+}
+
 @media(max-width: 648px) {
     .topNav{
         height: 1.6em;
