--- a/src/components/CardSliderVertical/CardSliderVertical.module.css
+++ b/src/components/CardSliderVertical/CardSliderVertical.module.css
@@ -1,8 +1,8 @@
 .cardSliderVertical{
     display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse;
     align-items: center;
-    height: 100;
+    height: 50vh;
     width: 40vw;
     border-radius: 1rem;
     background-color:rgb(237, 250, 255);
