--- a/src/components/MobVisionaryMessage/MobVisionaryMessage.module.css
+++ b/src/components/MobVisionaryMessage/MobVisionaryMessage.module.css
@@ -6,7 +6,7 @@
     border-radius: 8px;
     background-color: #eef2f5;
     margin: auto;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
   
   .cardHeading {
