--- a/src/pages/About/About.module.css
+++ b/src/pages/About/About.module.css
@@ -1,9 +1,22 @@
 .heading{
     text-align: center;
     font-family: sans-serif;
-    color: rgb(0, 0, 100);
+    color: rgb(0, 0, 80);
+    margin-bottom: -20px;
 }
 
 .nigga{
     color: rgb(0, 0, 0)   ;
+}
+
+.listItems{
+    margin-left: 2rem;
+    text-align: left;
+    font-weight: 500;
+}
+
+@media (max-width: 648px){
+    .heading{
+        margin-bottom: 20px;
+    }
 }
