--- a/src/pages/Admissions/Admissions.module.css
+++ b/src/pages/Admissions/Admissions.module.css
@@ -3,7 +3,15 @@
     padding: 0.5rem;
     font-family: sans-serif;
     color: rgb(0, 0, 78);
+    padding-left: 20rem;
+    padding-right: 20rem;
 }
 .haha{
     display: none ;
+}
+
+@media(max-width:648px){
+    .heading{
+        padding: 1rem;
+    }
 }
