--- a/src/pages/Calender/Calender.module.css
+++ b/src/pages/Calender/Calender.module.css
@@ -15,11 +15,55 @@
     overflow: hidden;
 }
 
+.downloadBox{
+    height: 5em;
+    width: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    justify-self: center;
+    padding: 0.5rem;
+    border-radius: 0.5rem;
+    background-color: rgb(227, 227, 227);
+}
+
+.downloadButton{
+    padding: 0.5rem;
+    border: 0;
+    font-family: sans-serif;
+    font-weight: 600;
+    color: white;
+    border-radius: 1rem;
+    height: 40px;
+    font-size: 150%;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.downloadButton:hover{
+    color: rgb(2, 0, 105);
+}
+
+.downloadButton:active{
+    transform: scale(0.95);
+}
+
+.downloadBox:active{
+    transform: scale(0.95);
+}
+
+#pdflogo:active{
+    transform: scale(0.95);
+}
+
 @media(max-width:648px){
     .calender{
         transform: rotate(90deg) translateY(30%) translateX(25%);
         max-width: 150%;
         margin: 0;
         margin-bottom: 18rem;
+    }
+    .downloadBox{
+        width: 60%;
     }
 }
