--- a/src/components/CardSliderVertical/CardSliderVertical.module.css
+++ b/src/components/CardSliderVertical/CardSliderVertical.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column-reverse;
     align-items: center;
-    height: 50vh;
+    height: 28vw;
     width: 40vw;
     border-radius: 1rem;
     background-color:rgb(237, 250, 255);
@@ -34,7 +34,7 @@
     .cardSliderVertical{
         width:85vw;
         margin: 0;
-        height: 20em;
+        height: 20%;
     }
     .card{
         height: 8em;
