--- a/src/components/Experimental2/Experimental2.module.css
+++ b/src/components/Experimental2/Experimental2.module.css
@@ -50,6 +50,7 @@
         margin: 0;
         border-width: 6px;
         margin-bottom: 2em;
+        transform: translateY(-60px) !important;
     }
     .title{
         font-size: 5.2vw;
