--- a/src/components/Experimental2/Experimental2.module.css
+++ b/src/components/Experimental2/Experimental2.module.css
@@ -37,7 +37,7 @@
 
 .description{
     font-size: 1.5vw;
-    margin-bottom: 30px;
+    margin-bottom: 0px;
     padding-left: 1.5vw;
 }
 @media(max-width:648px){
@@ -57,13 +57,14 @@
         overflow:visible ;
         margin: 0;
         text-align: start;
-        margin-top: 50%;
+        margin-top: 20%;
         text-align: center;
     }
     .description{
-        font-size: 4vw;
+        font-size: 105%;
         overflow:visible;
         margin: 0;
+        margin-top: -20px;
     }
     .image{
         max-width: 50%;
