--- a/src/components/Experimental2/Experimental2.module.css
+++ b/src/components/Experimental2/Experimental2.module.css
@@ -17,8 +17,8 @@
 .title{
     font-size: 2.5vw;
     color: rgb(30, 30, 30);
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-align: center;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
 }
 
 .textVals{
@@ -26,7 +26,6 @@
     flex-direction: column;
     justify-content: space-around;
     width: 70%;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif 
 }
 
 .image{
@@ -39,6 +38,9 @@
     font-size: 1.5vw;
     margin-bottom: 0px;
     padding-left: 1.5vw;
+    font-weight: 100 !important;
+    text-align: left !important;
+    font-family:sans-serif !important;
 }
 @media(max-width:648px){
     .Experimental{
@@ -65,6 +67,9 @@
         overflow:visible;
         margin: 0;
         margin-top: -20px;
+        font-weight: 100 !important;
+        text-align: left !important;
+        font-family:sans-serif !important;
     }
     .image{
         max-width: 50%;
