--- a/src/components/BgScroller/BgScroller.module.css
+++ b/src/components/BgScroller/BgScroller.module.css
@@ -40,7 +40,7 @@
   }
 
   #description{
-    font-size: 2.5vw;
+    font-size: 100%;
     color:rgb(255, 255, 255);
     margin-left: 7%;
     margin-right: 7%;
