--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -78,13 +78,14 @@ h4{
 
 @media (max-width: 648px){
     .footer{
-        height: 23vh;
+        height: 100%;
     }
     h2{
         font-size: 5vw;
         margin: 0;
         text-align: start;
         text-align: left;
+        padding-top: 10px;
     }
     h4{
         font-size: 3vw;
